--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   ],
   "author": "Gaurang",
   "license": "ISC",
-  "dependencies": {
-    "nodemon": "^3.1.9"
+  "devDependencies": {
+    "nodemon": "^3.1.9",
+    "prettier": "^3.4.2"
   }
 }
